# marinex2

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE_PROMPTS_LIBRARY_OPTIMIZED.md  Dockerfile  GITHUB_UPLOAD_INSTRUCTIONS.md  ITERATION_TRACKER_COMPREHENSIVE.md  LICENSE  MASTER_DEVELOPMENT_GUIDE.md  Makefile  NEXT_SESSION_GUIDE.md  PERFORMANCE_OPTIMIZATION_FRAMEWORK.md  PROJECT_CACHE.md  PROJECT_IMPLEMENTATION_GUIDE.md  PROJECT_TODO_MASTER.md  README.md  REQUIREMENTS_ANALYSIS_DEEP.md  RISK_ANALYSIS_COMPREHENSIVE.md  SESSION_CACHE_COMPREHENSIVE.md  SETUP_INSTRUCTIONS.md  demo_floatchat.py  docker-compose.yml  enhanced_indian_ocean_setup.py  extended_db_setup.py  floatchat_complete.py  floatchat_indian_ocean_enhanced.db-journal  git_commands.txt  main.py  pyproject.toml  quick_db_setup.py  requirements.txt  setup_database.py  simple_db_setup.py  simple_entities.py  streamlit_demo.py  test_groq_setup.py  verify_enhanced_db.py
data/argo/samples/: 2900226_meta.nc
migrations/: 001_create_core_schema.sql
scripts/: analyze_netcdf_structure.py
src/floatchat/: __init__.py  cli.py
src/floatchat/ai/: __init__.py
src/floatchat/ai/embeddings/: __init__.py  multi_modal_embeddings.py
src/floatchat/ai/llm/: __init__.py  anthropic_client.py  groq_client.py  groq_orchestrator.py  llm_orchestrator.py  mcp_integration.py  openai_client.py
src/floatchat/ai/nl2sql/: __init__.py  oceanographic_schema.py  query_parser.py  sql_generator.py
src/floatchat/ai/rag/: __init__.py  rag_pipeline.py
src/floatchat/ai/vector_database/: faiss_vector_store.py
src/floatchat/api/: __init__.py  health.py  main.py
src/floatchat/core/: __init__.py  config.py  exceptions.py  logging.py
src/floatchat/data/: __init__.py
src/floatchat/data/processors/: __init__.py  database_integration.py  netcdf_processor.py
src/floatchat/data/services/: __init__.py  ingestion_service.py
src/floatchat/domain/entities/: __init__.py  argo_entities.py
src/floatchat/infrastructure/: __init__.py
src/floatchat/infrastructure/database/: __init__.py  connection.py  service.py
src/floatchat/infrastructure/repositories/: __init__.py  argo_repository.py
src/floatchat/interface/: __init__.py  chat_components.py  config_manager.py  data_explorer.py  streamlit_app.py
tests/: __init__.py  performance_tests.py  run_tests.py  test_embeddings.py  test_integration.py  test_vector_database.py
